--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tinypng",
   "version": "0.1.0",
   "description": "'simple utility for tinypng'",
-  "main": "tinypng.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +9,7 @@
   "license": "ISC",
   "preferGlobal": "true",
   "bin": {
-    "tiny": "tinypng.js"
+    "tinypng": "tinypng.js"
   },
   "dependencies": {
     "minimist": "0.0.8",
