--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "preferGlobal": "true",
   "bin": {
-    "tinypng": "tinypng.js"
+    "tinypng": "tinypng"
   },
   "dependencies": {
     "minimist": "0.0.8",
